# Zero-GPU

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: download-model.sh  install-mac.sh  install-ubuntu.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  conversations.rs  hardware.rs  inference.rs  lib.rs  license.rs  models.rs  optimizer.rs  server.rs
src/components/: Navigation.tsx
src/pages/: LibraryPage.tsx  MonitorPage.tsx  OptimizePage.tsx  RunPage.tsx  ServerPage.tsx  SettingsPage.tsx
src/types/: index.ts
